--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "@mui/styles": "^5.4.1",
@@ -12,6 +13,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "emoji-mart": "^3.0.1",
+    "firebase": "^8.10.0",
     "material-ui-popup-state": "^2.0.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
