--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
