--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "^5.4.0",
     "@mui/styles": "^5.4.1",
     "@reduxjs/toolkit": "^1.8.0",
@@ -20,6 +21,7 @@
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
